--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,8 +2,10 @@ extends base
 include _reviewCard
 
 block append head
+    //- <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://unpkg.com/leaflet@1.9.4/dist/leaflet.js  ;">   
     link(rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="")
     script(src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="")
+    
 
 //- mixin is like reusable piece of code in which we can pass the parameters like function
 mixin overviewBox(label, text, icon)
